# marshmallow_dataclass

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  conf.py  index.rst  marshmallow_dataclass.rst  mypy_plugin.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: documentation.yml  python-package.yml  release.yml
conda_recipe/: meta.yaml
docs/: conf.py  docs.rst  index.html  index.rst  marshmallow_dataclass.rst
docs/_build/html/: docs.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/html/_modules/: marshmallow_dataclass.html
docs/html/: index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: marshmallow_dataclass.html
html/: .buildinfo  genindex.html  index.html  marshmallow_dataclass.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_modules/: index.html  marshmallow_dataclass.html
html/_sources/: modules.rst.txt
html/_sources/stubs/: marshmallow_dataclass.class_schema.rst.txt
html/_static/: documentation_options.js
html/stubs/: marshmallow_dataclass.class_schema.html  marshmallow_dataclass.dataclass.html
marshmallow_dataclass/: __init__.py  collection_field.py  generic_resolver.py  lazy_class_attribute.py  mypy.py  polyfield.py  typing.py  union_field.py
stubs/: marshmallow_dataclass.class_schema.rst  marshmallow_dataclass.dataclass.rst
tests/: README.md  test_annotated.py  test_city_building_examples.py  test_class_schema.py  test_collection.py  test_field_for_schema.py  test_forward_references.py  test_generics.py  test_lazy_class_attribute.py  test_load_to_dict.py  test_load_to_mapping.py  test_lrudict.py  test_memory_leak.py  test_mypy.py  test_mypy.yml  test_optional.py  test_post_load.py  test_schema_type.py  test_typevar_bindings.py  test_union.py
